--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node ./src/server.js",
-		"dev": "nodemon ./src/server.js"
+		"dev": "nodemon ./src/server.js",
+		"test": "mocha"
 	},
 	"dependencies": {
 		"cors": "^2.8.0",
@@ -27,6 +28,10 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
+		"chai": "^4.2.0",
+		"chai-as-promised": "^7.1.1",
+		"chai-http": "^4.3.0",
+		"mocha": "^8.2.1",
 		"nodemon": "^2.0.6"
 	}
 }
